--- a/index.html
+++ b/index.html
@@ -4,3 +4,6 @@
 </p>
 
 <img src="https://ik.imagekit.io/awwybhhmo/satellite_images/japanese/beyondmenu/hero/16.jpg?tr=w-3840,q-50" alt="a platter of sushi">
+<img src="You're loved_.jpeg" alt="a smiley mountain">
+
+
